@@ -1254,7 +1254,7 @@ bool turn_info::unit_in_cycle(unit_map::const_iterator it) const
 {
 	if(it->second.side() == team_num_ && unit_can_move(it->first,units_,map_,teams_) && it->second.user_end_turn() == false && !gui_.fogged(it->first.x,it->first.y)) {
 		const bool is_enemy = current_team().is_enemy(int(gui_.viewing_team()+1));
-		return is_enemy == false || it->second.invisible(map_.underlying_terrain(it->first),status_.get_time_of_day().lawful_bonus,it->first,units_,teams_) == false;
+		return is_enemy == false || it->second.invisible(map_.underlying_union_terrain(it->first),status_.get_time_of_day().lawful_bonus,it->first,units_,teams_) == false;
 	}
 
 	return false;
@@ -2722,7 +2722,7 @@ void turn_info::show_enemy_moves(bool ignore_units)
 
 	// Compute enemy movement positions
 	for(unit_map::iterator u = units_.begin(); u != units_.end(); ++u) {
-		bool invisible = u->second.invisible(map_.underlying_terrain(u->first),
+		bool invisible = u->second.invisible(map_.underlying_union_terrain(u->first),
 											 status_.get_time_of_day()
 											 .lawful_bonus,
 											 u->first, units_, teams_);
